# chip-8

./: .gitignore  CMakeLists.txt  Makefile  Makefile.emscripten  readme.md
emu/include/: cpu.hpp  emu.hpp  instructions.hpp
emu/src/: emu.cpp  instructions.cpp
emulator/include/: chip8.hpp  cpu.hpp  instruction.hpp  instructions.hpp  opcode.hpp  state.hpp
emulator/src/: chip8.cpp  instruction.cpp  instructions.cpp
platform/include/: graphics.hpp
platform/src/: graphics.cpp  main.cpp
src/: Makefile  Makefile.emscripten  main.cpp  main1.cpp
src/graphics/: frame_buffer.hpp
src/gui/: app.cpp  app.hpp
